[gd_scene load_steps=7 format=2]

[ext_resource path="res://Control/Camera2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Tiles/BackGround.tscn" type="PackedScene" id=2]
[ext_resource path="res://Control/tutorial_theme.tres" type="Theme" id=3]
[ext_resource path="res://Control/Buttons/ToMenuButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Control/menu_theme.tres" type="Theme" id=5]
[ext_resource path="res://Control/Buttons.gd" type="Script" id=6]

[node name="Credits" type="Control"]
theme = ExtResource( 5 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackGround" parent="." instance=ExtResource( 2 )]

[node name="Camera2D" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 7 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 320.0
margin_bottom = 320.0
rect_min_size = Vector2( 64, 64 )

[node name="Created" type="Label" parent="Control"]
margin_left = -256.0
margin_top = -384.0
margin_right = 262.0
margin_bottom = -281.0
text = "Created by: Lucas Del Piero
For the WOWIE JAM 3"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Label" parent="Control"]
margin_left = -352.0
margin_top = -224.0
margin_right = 372.0
margin_bottom = -15.0
text = "Art :  Lucas Del Piero
Music : wyver9
SFX: Lee Barkovich, 
RPG sound pack"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToMenuButton" parent="." instance=ExtResource( 4 )]
margin_left = -128.0
margin_top = 64.0
margin_right = 142.0
margin_bottom = 120.0
text = "Back to menu"
[connection signal="pressed" from="ToMenuButton" to="." method="_on_ToMenuButton_pressed"]
